import "client.comm.proto";
package client;

enum ROLE_STATUS_E
{
    RSE_STATUS_MEDITATE       = 0 ;   // 打坐
    RSE_STATUS_AUTOPATH       = 1 ;   // 自动寻路
    RSE_STATUS_FIGHT          = 2 ;   // 战斗状态
    RSE_STATUS_ROBOT          = 3 ;   // 挂机状态
    RSE_STATUS_PVP            = 4 ;   // PVP状态
    RSE_STATUS_ONLINE         = 5 ;   // 在线状态
    RSE_STATUS_ATTKMODE       = 6 ;   // 攻击模式
    RSE_STATUS_ALIVE          = 7 ;   // 存活状态
    RSE_STATUS_RIDING         = 8 ;   // 乘骑状态
    RSE_STATUS_FURIOUS        = 9 ;   // 狂怒
    RSE_STATUS_HURTED         = 10;   // 重伤 // 翻倍伤害              
    RSE_STATUS_WEEK           = 11;   // 虚弱 // 冻结抗性          
    RSE_STATUS_GIDDY          = 12;   // 眩晕 // 不可移动          
    RSE_STATUS_FAINT          = 13;   // 昏迷                      
    RSE_STATUS_FIRED          = 14;   // 着火 // 反向移动          
    RSE_STATUS_POSION         = 15;   // 中毒                      
    RSE_STATUS_BLOOD          = 16;   // 流血                      
    RSE_STATUS_INJURY         = 17;   // 内伤 // 冻结防御力        
    RSE_STATUS_CURSED         = 18;   // 诅咒 // 冻结MP            
    RSE_STATUS_BLIND          = 19;   // 失明 // 冻结视野          
    RSE_STATUS_MAIMED         = 20;   // 残废 // 冻结攻击力        
    RSE_STATUS_SILENT         = 21;   // 沉默 // 不可使用技能      
    RSE_STATUS_DISARM         = 22;   // 缴械 // 装备攻击属性失效  
    RSE_STATUS_SLOWLY         = 23;   // 迟缓 // 装备防御属性失效  
    RSE_STATUS_DEC_HARM       = 24;   // 降低伤害 // 忽略伤害
    RSE_STATUS_REJ_HARM       = 25;   // 反弹伤害 // 嘲讽
    RSE_STATUS_STREANTH       = 26;   // 体力
    RSE_STATUS_BODY           = 27;   // 变身
    RSE_STATUS_GUARD          = 28;   // 运镖状态
    RSE_STATUS_COMM_PRACTICE  = 29;   // 双修
    RSE_STATUS_MAX            = 30;   // 最大值
};								
								
message role_status {			
    optional bool meditate              = 1[default = false];        // 打坐
    optional bool autopath              = 2[default = false];        // 自动寻路
    optional bool fight                 = 3[default = false];        // 战斗状态
    optional bool robot                 = 4[default = false];        // 挂机状态
    enum pvp_status                                           
    {                                                         
        pvp_kill  = 0;  					            	  	     // 杀戮状态
        pvp_prote = 1;  					            	  	     // 保护状态		
    }                                                         
    optional pvp_status pvp             = 5[default = pvp_prote];    // pvp状态
    optional bool online                = 6[default = false];        // 在线状态
    enum attack_mode                       
    {                                                         
        attack_mod_null   = 0;				                     	 // 无攻击模式
        attack_mod_peace  = 1;				                    	 // 和平攻击模式，只能攻击怪物，不能攻击其它任何玩家
        attack_mod_team   = 2;				                    	 // 队伍攻击模       ;除了队伍外的其它人和怪物都可以攻击
        attack_mod_family = 3;				                    	 // 家族攻击模式       ;除了本家族的其它角色都可以攻击
        attack_mod_all    = 4;				                    	 // 全体攻击模式，所有其它角色
		attack_mod_camp	  = 5;										 //阵营模式，只能攻击其他阵营玩家
		attack_mod_invalid  = 6;										// 永远不要用这个
    }                                                         
    optional attack_mode atk_mode       = 7[default = attack_mod_null];        //攻击模式
    enum alive_status                                    
    {                                                    
        status_alive  = 1;                                           // 存活
        status_dead   = 2;                                           // 死亡
    }                                                    
    optional alive_status alive         = 8[default = status_alive]; // 存活状态
    enum riding_status                                     
    {                                                      
        status_walk   = 0;  				                         // 行走状态，没带翅膀或隐藏了翅膀
        status_riding = 1;                                           // 乘骑状态,就是带上翅膀
        status_fly    = 2;                                           // 飞行状态,就是带着翅膀的时候飞天
    }                                                                   
    optional riding_status riding      = 9[default = status_walk];   // 乘骑状态
    optional bool   furious              = 10[default = false];        // 狂怒
    optional bool   hurted               = 11[default = false];        // 重伤
    optional bool   week                 = 12[default = false];        // 虚弱
    optional bool   giddy                = 13[default = false];        // 眩晕
    optional bool   faint                = 14[default = false];        // 昏迷
    optional bool   fired                = 15[default = false];        // 着火
    optional bool   posion               = 16[default = false];        // 中毒
    optional bool   blood                = 17[default = false];        // 流血
    optional bool   injury               = 18[default = false];        // 内伤
    optional bool   cursed               = 19[default = false];        // 诅咒
    optional bool   blind                = 20[default = false];        // 失明
    optional bool   maimed               = 21[default = false];        // 残废
    optional bool   silent               = 22[default = false];        // 沉默
    optional bool   disarm               = 23[default = false];        // 缴械
    optional bool   slowly               = 24[default = false];        // 迟缓
    optional bool   dec_harm             = 25[default = false];        // 降低伤害
    optional bool   rej_harm             = 26[default = false];        // 反弹伤害
    optional bool   streanth             = 27[default = false];        // 体力
    optional bool   body                 = 28[default = false];        // 变身
    optional uint32 guard                = 29[default = 0];            // 运镖状态
    optional bool   comm_practice        = 30[default = false];        // 双修状态
}

message change_status{
    required role_status rs        = 1;  // 支持填充 atk_mode 字段

    optional server_head svr_head  = 1000;
}

// 被谁干掉通知
message notify_kill_event {
    required role_data dead              = 1; // 死者
    required role_data killer            = 2; // 杀手
    optional uint32    dead_lose_factor  = 3; // 死者损失的真气
    optional uint32    killer_got_factor = 4; // 杀手获得的真气
}

// 选择重生方式
message select_relive_type_req {
    enum TYPE {
        SITU        = 0; // 原地
        CHECK_POINT = 1; // 检查点
        MAIN_CITY   = 2; // 主城
        BIRTH_POINT = 3; // 出生点
        SAFE_ZONE   = 4; // 安全区
    }
    
    required TYPE        type     = 1;
    optional bool        auto_buy = 2;     
    optional server_head svr_head = 1000;
}

message select_relive_type_rsp {
    enum RET {
        SUCCESS      = 0; // 正常
        PROPS_LIMIT  = 1; // 没有道具
        MONEY_LIMIT  = 2; // 钱不够
        CONFIG_ERROR = 3; // 配置错误
    }
    
    required RET ret = 1;  
}

// 零点更新
message dark_zero_time {
    required uint32 unixtime = 1;
}
